.content overflow fix

--- a/projects/normalize/src/app/map/about-card/about-card.component.less
+++ b/projects/normalize/src/app/map/about-card/about-card.component.less
@@ -8,7 +8,6 @@
         display: flex;
         flex-flow: column;
         align-items: flex-start;
-        overflow-x: hidden;
         width: 100%;
         
         .title {
